fix button overflow from searchbar

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -505,7 +505,7 @@
         &.ai {
             background: rgb(255 255 255 / 0.1);
             color: white;
-            padding: 6px 20px;
+            padding-block: 6px;
             border-radius: 20px;
             font-weight: bold;
             font-size: var(--fz-sm);
